--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>A HTML5 Game</title>
+    <style>
+        #canvas{
+            position:absolute;
+            top:50%;
+            left:50%;
+            transform: translate(-50%,-50%);
+        }
+    </style>
 </head>
 <body>
-<canvas width="800" height="600" id="canvas" style="background-color: cornflowerblue;max-width: 100%;"></canvas>
+<canvas width="1024" height="512" id="canvas" style="background-color: cornflowerblue;max-width: 100%;"></canvas>
 <script src="js/assetLoader.js"></script>
 <script src="js/sprite.js"></script>
+<script src="js/background.js"></script>
+<script src="js/hero.js"></script>
+<script src="js/scenegame.js"></script>
 <script src="js/game.js"></script>
 <script src="js/main.js"></script>
 </body>
