--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <canvas width="1024" height="512" id="canvas" style="background-color: cornflowerblue;max-width: 100%;"></canvas>
 <script src="js/assetLoader.js"></script>
 <script src="js/sprite.js"></script>
+<script src="js/wave.js"></script>
 <script src="js/servicemanager.js"></script>
 <script src="js/bullet.js"></script>
 <script src="js/background.js"></script>
