--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <script src="js/bullet.js"></script>
 <script src="js/background.js"></script>
 <script src="js/hero.js"></script>
+<script src="js/scenegameover.js"></script>
 <script src="js/scenehome.js"></script>
 <script src="js/scenegame.js"></script>
 <script src="js/game.js"></script>
