Updated the background and the loading progress bar

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
             top:50%;
             left:50%;
             transform: translate(-50%,-50%);
+            background: url("vault/images/Backgrounds/back.png");
         }
     </style>
 </head>
 <body>
-<canvas width="700" height="400" id="canvas" style="background-color: cornflowerblue;max-width: 100%;"></canvas>
+<canvas width="700" height="400" id="canvas" ></canvas>
 <script src="js/assetLoader.js"></script>
 <script src="js/sprite.js"></script>
 <script src="js/wave.js"></script>
